added logo & ribbon

--- a/css/mod.css
+++ b/css/mod.css
@@ -23,7 +23,7 @@ div.jumbotron{
 }
 
 .jumbotron .callout h1{
-  text-shadow: 1px 1px 40px #000;
+  text-shadow: 1px 1px 30px #000;
   color: white;
   font-family: Raleway, Helvetica Neue;
   font-weight: 100;
@@ -31,3 +31,41 @@ div.jumbotron{
   line-height: 1.2;
 }
 
+.logo {
+  position: absolute;
+  top: -3px;
+  left: 5%;
+}
+
+.logo .ribbon {
+    background: #eee;
+    border-left: 1px dashed #aaa;
+    border-right: 1px dashed #aaa;
+    border-radius: 5px 5px 0 0;
+    box-shadow: 5px 0 0 #eee,
+                -5px 0 0 #eee;
+    height: 100px;
+    margin: 0 5px;
+    position: relative;
+    width: 90px;
+    -webkit-filter: drop-shadow(0 2px 5px hsla(0,0%,0%,.5));
+    text-align: center;
+    padding-top: 20px;
+}
+.logo .ribbon:after,
+.logo .ribbon:before {
+    border-top: 15px solid #eee;
+    content: '';
+    height: 0;
+    position: absolute;
+    top: 100%;
+    width: 0;
+}
+.logo .ribbon:after {
+    border-left: 50px solid transparent;
+    right: -6px;
+}
+.logo .ribbon:before {
+    border-right: 50px solid transparent;
+    left: -6px;
+}
